--- a/app/src/main/res/layout/todo_fragment.xml
+++ b/app/src/main/res/layout/todo_fragment.xml
@@ -22,7 +22,7 @@
 
         <include
             layout="@layout/todo_item"
-            app:todo_task="@{todoTaskViewModel.todo}"/>
+            app:todoTask="@{todoTaskViewModel.todoTask}"/>
 
 
     </LinearLayout>
