Added callback for checkbox on click

--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -6,6 +6,9 @@
     <data>
         <variable name="todoTask"
                   type="com.example.android.persistence.model.TodoTask"/>
+
+        <variable name="callback"
+            type="com.example.android.persistence.ui.TodoTaskClickCallback"/>
     </data>
 
     <android.support.v7.widget.CardView
@@ -31,7 +34,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:contentDescription="Todo Description"
+                android:contentDescription="@string/todo_description"
                 android:text="@{todoTask.description}"
                 app:layout_constraintEnd_toStartOf="@+id/checkBox"
                 app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:checked="@{todoTask.completed}"
+                android:onClick="@{() ->  callback.onClick(todoTask)}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/name" />
 
