--- a/app/src/main/res/layout/todo_list_fragment.xml
+++ b/app/src/main/res/layout/todo_list_fragment.xml
@@ -26,7 +26,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/todo_list"
-            android:contentDescription="@string/cd_products_list"
+            android:contentDescription="@string/cd_todo_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="LinearLayoutManager"
